--- a/todos-html-js/style.css
+++ b/todos-html-js/style.css
@@ -21,22 +21,23 @@ body {
   gap: 0.5rem;
 }
 
+.todo-form {
+  font-size: large;
+  font-weight: 700;
+  gap: 1rem;
+}
+
 .todo-field {
   padding: 18px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
 }
 
 .todo-legend {
   font-size: 46px;
-}
-
-.todo-form {
-  font-size: large;
-  font-weight: 700;
-  display: flex;
-  gap: 0.5rem;
 }
 
 .todo-input {
@@ -48,6 +49,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin: 6px 6px 6px 6px;
 }
 
 .todo-list > li {
@@ -66,6 +68,7 @@ body {
 
 button {
   font-size: medium;
+  transition-duration: 100ms;
   font-weight: 600;
   padding: 10px;
   color: white;
